--- a/.gitignore
+++ b/.gitignore
@@ -2,25 +2,43 @@
 */build/*
 
 # Compiled class file
-*.class
+*/*.class
 
 # Log file
-*.log
+*/*.log
 
 # BlueJ files
-*.ctxt
+*/*.ctxt
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*/.mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+*/*.jar
+*/*.war
+*/*.nar
+*/*.ear
+*/*.zip
+*/*.tar.gz
+*/*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*/.gradle
+*/build/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+
+*/.idea
+*/*.iws
+*/*.iml
+*/*.ipr
+*/out/
+
+.DS_Store
